[package]
name = "lightsync"
version = "0.2.0"
authors = ["Liamolucko <liampm32@gmail.com>"]
edition = "2018"
build = "src/build.rs"
links = "LogitechLEDLib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
phf = { version = "0.7.24", features = ["macros"] }
num_enum = "0.5.1"

[build-dependencies]
bindgen = "0.55.1"
